# postpredict

./: pyproject.toml
docs/: fit_schaake.ipynb
src/postpredict/: dependence.py  weighters.py
tests/postpredict/dependence/: conftest.py  test_apply_shuffle.py  test_build_train_X_Y.py  test_pivot_horizon.py  test_schaake_build_templates.py  test_transform.py
tests/postpredict/metrics/: test_energy_score.py
tests/postpredict/weighters/: test_UnivariateGaussianKernel.py
