[project]
name = "postpredict"
description = "Postprocess probabilistic predictions"
license = {text = "MIT License"}
readme = "README.md"
requires-python = '>=3.9'
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

dependencies = [
    "numpy",
    "polars",
    "scikit-learn",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "ruff",
    "toml",
    "types-toml",
]

[project.urls]
Repository = "https://github.com/reichlab/postprocess.git"

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
tmp_path_retention_policy = "none"
testpaths = [
    "tests",
]

[tools.setuptools]
packages = ["postpredict"]

[tool.ruff]
line-length = 120
lint.extend-select = ["I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.dynamic]
version = {attr = "postpredict.__version__"}
